--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="slick-content">
 						<h2>Os direitos e deveres de um suporte (ou visitante)</h2>
 						<p>Você está entrando no clube como suporte, a partir de hoje, você é uma página em branco para nós, no decorrer da sua experiência, caso decidir continuar e não perder o foco, marcando presença em eventos e encontros, fazendo as missões, esse livro será sendo escrito conforme as suas atitudes.</p>
-						<p>Como suporte, nós (você e nós) não temos nenhum direito de ajudar um ao outro, ou seja, caso alguém te atacar ou fazer comentários, nós não ficamos responsáveis de retaliação. Isso vai mudar quando seu período de experiência acabar.</p>
+						<p>Como suporte, nós (você e nós) não temos nenhum dever de ajudar um ao outro, ou seja, caso alguém te atacar ou fazer comentários, nós não ficamos responsáveis de retaliação. Isso vai mudar quando seu período de experiência acabar.</p>
 						<p>Nos próximos dias você irá conhecer o nosso Diretor de Instrução (Diretor atual), ele será seu tutor nessas primeiras semanas no clube, e explicará alguns dos seus direitos e deveres como suporte com mais detalhes.</p>
 					</div>
 				</div>
