--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div id="insanosmc">
 					<div class="slick-content">
 						<h2>O Insanos Moto Clube Brasil</h2>
-						<p>Caso não saiba, o Insanos MC é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
+						<p>Caso você não saiba, o Insanos MC é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
 					</div>
 				</div>
 				<div id="insanosmcgta">
@@ -57,7 +57,7 @@
 				<div id="final">
 					<div class="slick-content">
 						<h2>Para finalizar</h2>
-						<p>Durante a primeira fase aqui no clube você será conhecido como Suporte, você poderá comparecer aos nossos eventos e rolês, nesse momento de suporte você irá tirar todas dúvidas que tiver de preferência com o Diretor de Instrução, mas também com outros membros e até mesmo com prospects.</p>
+						<p>Durante a primeira fase aqui no clube você será conhecido como Suporte, você poderá comparecer aos nossos eventos e rolês. Nesse momento de suporte, você irá tirar todas dúvidas que tiver de preferência com o Diretor de Instrução, mas também com outros membros e até mesmo com prospects.</p>
 						<p>Sempre ficar com a profissão de mecânico, assim você poderá ajudar caso aconteça algum acidente durante os encontros.</p>
 					</div>
 				</div>
