--- a/index.html
+++ b/index.html
@@ -31,25 +31,27 @@
 					<div class="slick-content">
 						<h2>O Insanos Moto Clube Brasil</h2>
 						<p>Caso você não saiba, o Insanos MC é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
+						<p>E se nós estamos usando o nome Insanos M.C, é porque tivemos a autorização deles. Até teve uma vez que alguns membros entraram para jogar aqui no servidor e gostaram do nosso trabalho.</p>
 					</div>
 				</div>
 				<div id="insanosmcgta">
 					<div class="slick-content">
 						<h2>O clube no servidor</h2>
 						<p>Saindo um pouco dos padrões do servidor, aqui nós não somos um clan, nem uma guilda, mas um moto clube, com as nossas próprias regras e estilo de jogo, onde cada um que entra ou sai será lembrado de alguma forma, e cada um que fica, tem a chance de criar um nome dentro do clube.</p>
+						<p>Quando alguém faz perguntas como "Posso entrar no clan? Que guild é essa?", já é motivo pra todo mundo cair no riso, isso porque nós somos um moto clube, enfim, um meme interno nosso.</p>
 					</div>
 				</div>
 				<div id="hierarquia">
 					<div class="slick-content">
 						<h2>A Hierarquia</h2>
-						<p>Assim como no exército que possui a hierarquia militar composta por Marechal, Generais, Coronel, Major, Capitão até Cabo e Soldado por último, num moto clube também existe uma hierarquia, e geralmente é composta por:<br/>
+						<p>Assim como no exército que possui a hierarquia militar composta por Marechal, Generais, Coronel, Major, Capitão até Cabo, Soldado e Recruta por último, num moto clube também existe uma hierarquia, e geralmente é composta por:<br/>
 						Presidente, Vice-presidente, Sargento de armas, Secretário, Tesoureiro, Capitão da estrada, Membro, Meio colete, Prospect(o) e Suporte.</p>
 					</div>
 				</div>
 				<div id="direitos-suporte">
 					<div class="slick-content">
 						<h2>Os direitos e deveres de um suporte (ou visitante)</h2>
-						<p>Você está entrando no clube como suporte, a partir de hoje, você é uma página em branco para nós, no decorrer da sua experiência, caso decidir continuar e não perder o foco, marcando presença em eventos e encontros, fazendo as missões, esse livro será sendo escrito conforme as suas atitudes.</p>
+						<p>Você está entrando no clube como suporte, a partir de hoje, você é uma página em branco para nós, no decorrer da sua experiência, caso decidir continuar e não perder o foco, marcando presença em eventos e encontros, esse livro será sendo escrito conforme as suas atitudes.</p>
 						<p>Como suporte, nós (você e nós) não temos nenhum dever de ajudar um ao outro, ou seja, caso alguém te atacar ou fazer comentários, nós não ficamos responsáveis de retaliação. Isso vai mudar quando seu período de experiência acabar.</p>
 						<p>Nos próximos dias você irá conhecer o nosso Diretor de Instrução (Diretor atual), ele será seu tutor nessas primeiras semanas no clube, e explicará alguns dos seus direitos e deveres como suporte com mais detalhes.</p>
 					</div>
@@ -58,7 +60,7 @@
 					<div class="slick-content">
 						<h2>Para finalizar</h2>
 						<p>Durante a primeira fase aqui no clube você será conhecido como Suporte, você poderá comparecer aos nossos eventos e rolês. Nesse momento de suporte, você irá tirar todas dúvidas que tiver de preferência com o Diretor de Instrução, mas também com outros membros e até mesmo com prospects.</p>
-						<p>Sempre ficar com a profissão de mecânico, assim você poderá ajudar caso aconteça algum acidente durante os encontros.</p>
+						<p>Sempre ficar com a profissão de mecânico, assim você poderá ajudar caso aconteça algum acidente durante os encontros. Isso vale para Suporte e também para Prospects e Meio Coletes.</p>
 					</div>
 				</div>
 				<div>
