--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 					<div class="slick-content">
 						<h2>O Insanos Moto Clube Brasil</h2>
 						<p>Caso você não saiba, o Insanos MC é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
-						<p>E se nós estamos usando o nome Insanos M.C, é porque tivemos a autorização deles. Até teve uma vez que alguns membros entraram para jogar aqui no servidor e gostaram do nosso trabalho.</p>
+						<!-- <p>E se nós estamos usando o nome Insanos M.C, é porque tivemos a autorização deles. Até teve uma vez que alguns membros entraram para jogar aqui no servidor e gostaram do nosso trabalho.</p> -->
 					</div>
 				</div>
 				<div id="insanosmcgta">
 					<div class="slick-content">
 						<h2>O clube no servidor</h2>
 						<p>Saindo um pouco dos padrões do servidor, aqui nós não somos um clan, nem uma guilda, mas um moto clube, com as nossas próprias regras e estilo de jogo, onde cada um que entra ou sai será lembrado de alguma forma, e cada um que fica, tem a chance de criar um nome dentro do clube.</p>
-						<p>Quando alguém faz perguntas como "Posso entrar no clan? Que guild é essa?", já é motivo pra todo mundo cair no riso, isso porque nós somos um moto clube, enfim, um meme interno nosso.</p>
+						<p>Quando alguém faz perguntas como "Posso entrar no clan? Que guild é essa?", já é motivo pra todo mundo cair na risada, isso porque nós somos um moto clube, enfim, um meme interno nosso.</p>
 					</div>
 				</div>
 				<div id="hierarquia">
@@ -51,27 +51,39 @@
 				<div id="direitos-suporte">
 					<div class="slick-content">
 						<h2>Os direitos e deveres de um suporte (ou visitante)</h2>
-						<p>Você está entrando no clube como suporte, a partir de hoje, você é uma página em branco para nós, no decorrer da sua experiência, caso decidir continuar e não perder o foco, marcando presença em eventos e encontros, esse livro será sendo escrito conforme as suas atitudes.</p>
-						<p>Como suporte, nós (você e nós) não temos nenhum dever de ajudar um ao outro, ou seja, caso alguém te atacar ou fazer comentários, nós não ficamos responsáveis de retaliação. Isso vai mudar quando seu período de experiência acabar.</p>
-						<p>Nos próximos dias você irá conhecer o nosso Diretor de Instrução (Diretor atual), ele será seu tutor nessas primeiras semanas no clube, e explicará alguns dos seus direitos e deveres como suporte com mais detalhes.</p>
+						<p>Você está entrando no clube como suporte, a partir de hoje, você é um livro em branco para nós, no decorrer da sua experiência, se decidir continuar firme e não perder o foco, marcando presença em eventos e encontros, esse livro será sendo escrito conforme as suas atitudes.</p>
+						<p>Como suporte, você não é ainda um membro, então nós (você e nós) não temos nenhum dever de ajudar um ao outro, ou seja, caso alguém te atacar ou fazer comentários na rua, nós não ficamos responsáveis de retaliação. Isso vai mudar quando seu período de experiência acabar.</p>
+						<p>Nos próximos dias você irá conhecer o nosso Diretor de Instrução (Diretor atual), ele será seu tutor nessas primeiras semanas no clube, e explicará alguns dos seus direitos e deveres como suporte em mais detalhes.</p>
 					</div>
 				</div>
 				<div id="final">
 					<div class="slick-content">
 						<h2>Para finalizar</h2>
-						<p>Durante a primeira fase aqui no clube você será conhecido como Suporte, você poderá comparecer aos nossos eventos e rolês. Nesse momento de suporte, você irá tirar todas dúvidas que tiver de preferência com o Diretor de Instrução, mas também com outros membros e até mesmo com prospects.</p>
-						<p>Sempre ficar com a profissão de mecânico, assim você poderá ajudar caso aconteça algum acidente durante os encontros. Isso vale para Suporte e também para Prospects e Meio Coletes.</p>
+						<p>Durante a primeira fase aqui no clube, você será conhecido como Suporte, você poderá comparecer aos nossos eventos e encontros, conhecer a nossa rotina, entre outras coisas. Nesse momento de suporte, você irá tirar todas dúvidas que tiver de preferência com o Diretor de Instrução, mas também com outros membros e até mesmo com prospects.</p>
+						<p>Sempre ficar com a profissão de mecânico em interações do clube, assim será mais fácil de te identificar e você poderá ajudar caso aconteça algum acidente durante os encontros. Isso vale para Suporte e também para Prospects e Meio Coletes.</p>
+					</div>
+				</div>
+				<div id="final-obs">
+					<div class="slick-content">
+						<h2>Perguntas adicionais</h2>
+						<ul>
+							<li>Comentar o básico sobre a coleta de lixos</li>
+							<li>Tem qual moto? Freeway ou Wayfarer?</li>
+							<li>Horário que joga geralmente?</li>
+							<li>Trabalha ou tem alguma empresa?</li>
+							<li>Tem alguma treta com alguém ou algum grupo?</li>
+							<li>É de qual estado?</li>
+						</ul>
 					</div>
 				</div>
 				<div>
 					<div class="slick-content">
-						<h3 style="text-align: center;">Agora que você está ciente do que te falamos, ainda está de disposto a continuar e começar a sua jornada?</h3>
+						<h3 style="text-align: center;">Agora depois de tudo que falamos, ainda está de disposto a continuar e começar a sua jornada?</h3>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<!-- <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script> -->
 		<script src="assets/vendor/jquery/jquery.min.js"></script>
 		<script src="assets/vendor/slick-slider/slick.min.js"></script>
 		<script src="assets/js/main.js"></script>
