--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Roteiro Suportes</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="assets/vendor/slick-slider/slick.css" />
 		<link rel="stylesheet" type="text/css" href="assets/vendor/slick-slider/slick-theme.css" />
