Atualização do texto

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div id="insanosmc">
 					<div class="slick-content">
 						<h2>O Insanos Moto Clube Brasil</h2>
-						<p>Caso você não saiba, o Insanos MC é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
+						<p>Caso você não saiba, os Insanos M.C. é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
 						<!-- <p>E se nós estamos usando o nome Insanos M.C, é porque tivemos a autorização deles. Até teve uma vez que alguns membros entraram para jogar aqui no servidor e gostaram do nosso trabalho.</p> -->
 					</div>
 				</div>
@@ -39,13 +39,13 @@
 					<div class="slick-content">
 						<h2>O clube no servidor</h2>
 						<p>Saindo um pouco dos padrões do servidor, aqui nós não somos um clan, nem uma guilda, mas um moto clube, com as nossas próprias regras e estilo de jogo, onde cada um que entra ou sai será lembrado de alguma forma, e cada um que fica, tem a chance de criar um nome dentro do clube.</p>
-						<p>Quando alguém faz perguntas como "Posso entrar no clan? Que guild é essa?", já é motivo pra todo mundo cair na risada, isso porque nós somos um moto clube, enfim, um meme interno nosso.</p>
+						<!-- <p>Quando alguém faz perguntas como "Posso entrar no clan? Que guild é essa?", já é motivo pra todo mundo cair na risada, isso porque nós somos um moto clube, enfim, um meme interno nosso.</p> -->
 					</div>
 				</div>
 				<div id="hierarquia">
 					<div class="slick-content">
 						<h2>A Hierarquia</h2>
-						<p>Assim como no exército que possui a hierarquia militar composta por Marechal, Generais, Coronel, Major, Capitão até Cabo, Soldado e Recruta por último, num moto clube também existe uma hierarquia, e geralmente é composta por:<br/>
+						<p>Assim como no exército que possui a hierarquia militar composta por Marechal, Generais, Coronel, Major, Capitão até Cabo, Soldado e Recruta por último, em moto clubes também existe uma hierarquia, e geralmente é composta por:<br/>
 						Presidente, Vice-presidente, Sargento de armas, Secretário, Tesoureiro, Capitão da estrada, Membro, Meio colete, Prospect(o) e Suporte.</p>
 					</div>
 				</div>
@@ -70,8 +70,7 @@
 						<ul>
 							<li>Comentar o básico sobre a coleta de lixos</li>
 							<li>Tem qual moto? Freeway ou Wayfarer?</li>
-							<li>Horário que joga geralmente?</li>
-							<li>Trabalha ou tem alguma empresa?</li>
+							<li>É dono ou trabalha em alguma empresa?</li>
 							<li>Tem alguma treta com alguém ou algum grupo?</li>
 							<li>É de qual estado?</li>
 						</ul>
