--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="issi-slider">
 				<div id="insanosmc">
 					<div class="slick-content">
-						<h2>O Insanos Moto Clube Brasil</h2>
+						<h2>Os Insanos Moto Clube Brasil</h2>
 						<p>Caso você não saiba, os Insanos M.C. é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
 						<!-- <p>E se nós estamos usando o nome Insanos M.C, é porque tivemos a autorização deles. Até teve uma vez que alguns membros entraram para jogar aqui no servidor e gostaram do nosso trabalho.</p> -->
 					</div>
@@ -66,11 +66,11 @@
 				</div>
 				<div id="final-obs">
 					<div class="slick-content">
-						<h2>Perguntas adicionais</h2>
+						<h2>Conteúdo adicional</h2>
 						<ul>
+							<li>Como você lida com brincadeiras, zuação, você aguenta?</li>
 							<li>Comentar o básico sobre a coleta de lixos</li>
 							<li>Tem qual moto? Freeway ou Wayfarer?</li>
-							<li>É dono ou trabalha em alguma empresa?</li>
 							<li>Tem alguma treta com alguém ou algum grupo?</li>
 							<li>É de qual estado?</li>
 						</ul>
