Atualização de textos

--- a/index.html
+++ b/index.html
@@ -8,77 +8,61 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="assets/vendor/slick-slider/slick.css" />
 		<link rel="stylesheet" type="text/css" href="assets/vendor/slick-slider/slick-theme.css" />
-		<style type="text/css">
-/*			#myVideo {
-				position: fixed;
-				right: 0;
-				bottom: -300px;
-				min-width: 100%; 
-				min-height: 100%;
-			}*/
-		</style>
 	</head>
 	<body>
 
 
 		<div class="issi-wrap">
-<!-- 		<video autoplay muted loop id="myVideo">
-			<source src="assets/images/stock-footage-realistic-flames-for-editing-videos.webm" type="video/mp4">
-			<source src="assets/images/yt1s.com - Fire and Flame Overlay 18 Royalty Free Green Screen Footage (online-video-cutter.com) (1).mp4" type="video/mp4">
-			Your browser does not support HTML5 video.
-		</video> -->
 			<div class="issi-slider">
 				<div id="insanosmc">
 					<div class="slick-content">
 						<h2>Os Insanos Moto Clube Brasil</h2>
-						<p>Caso você não saiba, os Insanos M.C. é um clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível.</p>
-						<!-- <p>E se nós estamos usando o nome Insanos M.C, é porque tivemos a autorização deles. Até teve uma vez que alguns membros entraram para jogar aqui no servidor e gostaram do nosso trabalho.</p> -->
+						<p>Caso você não saiba, o Insanos M.C. é um moto clube real e o maior do Brasil. É um clube sério, organizado que tem por base o cumprimento da hierarquia e disciplina, e aqui no CVR nós tentamos seguir esses princípios o mais fiel possível como uma divisão online.</p>
 					</div>
 				</div>
 				<div id="insanosmcgta">
 					<div class="slick-content">
 						<h2>O clube no servidor</h2>
-						<p>Saindo um pouco dos padrões do servidor, aqui nós não somos um clan, nem uma guilda, mas um moto clube, com as nossas próprias regras e estilo de jogo, onde cada um que entra ou sai será lembrado de alguma forma, e cada um que fica, tem a chance de criar um nome dentro do clube.</p>
-						<!-- <p>Quando alguém faz perguntas como "Posso entrar no clan? Que guild é essa?", já é motivo pra todo mundo cair na risada, isso porque nós somos um moto clube, enfim, um meme interno nosso.</p> -->
+						<p>Saindo um pouco dos padrões do servidor, aqui nós não somos um clan, nem uma guilda, mas um moto clube, com as nossas próprias regras e estilo de jogo, onde cada um que entra ou sai será lembrado de alguma forma, e quem fica, tem a chance de criar um nome dentro do clube.</p>
 					</div>
 				</div>
 				<div id="hierarquia">
 					<div class="slick-content">
 						<h2>A Hierarquia</h2>
-						<p>Assim como no exército que possui a hierarquia militar composta por Marechal, Generais, Coronel, Major, Capitão até Cabo, Soldado e Recruta por último, em moto clubes também existe uma hierarquia, e geralmente é composta por:<br/>
-						Presidente, Vice-presidente, Sargento de armas, Secretário, Tesoureiro, Capitão da estrada, Membro, Meio colete, Prospect(o) e Suporte.</p>
+						<p>Para manter toda essa organização e respeito, assim como no exército que possui a hierarquia militar, em moto clubes também existe uma hierarquia, sendo o presidente a figura principal do clube e o suporte como a base dele, de onde tem o início de uma longa e árdua caminhada.</p>
 					</div>
 				</div>
 				<div id="direitos-suporte">
 					<div class="slick-content">
 						<h2>Os direitos e deveres de um suporte (ou visitante)</h2>
-						<p>Você está entrando no clube como suporte, a partir de hoje, você é um livro em branco para nós, no decorrer da sua experiência, se decidir continuar firme e não perder o foco, marcando presença em eventos e encontros, esse livro será sendo escrito conforme as suas atitudes.</p>
-						<p>Como suporte, você não é ainda um membro, então nós (você e nós) não temos nenhum dever de ajudar um ao outro, ou seja, caso alguém te atacar ou fazer comentários na rua, nós não ficamos responsáveis de retaliação. Isso vai mudar quando seu período de experiência acabar.</p>
-						<p>Nos próximos dias você irá conhecer o nosso Diretor de Instrução (Diretor atual), ele será seu tutor nessas primeiras semanas no clube, e explicará alguns dos seus direitos e deveres como suporte em mais detalhes.</p>
+						<p>Todos os novatos que entram no clube são conhecidos como suportes, como ainda não são membros efetivos no clube e não é exatamente um cargo, também são chamados de visitantes.</p>
+						<p>É um período de experiência tanto para o suporte como para os membros. O suporte será convidado para participar dos nossos encontros e eventos, conhecer a nossa rotina... porém se não demonstrar comprometimento, mostrar de falta de interesse ou ter uma personalidade forte, será convidado a se retirar do clube sem nenhum aviso oficial.</p>
+						<p>Durante a primeira fase aqui no clube, o seu dever não é nada mais do que se mostrar presente, afinal, quem não é visto, não é lembrado.</p>
 					</div>
 				</div>
 				<div id="final">
 					<div class="slick-content">
 						<h2>Para finalizar</h2>
-						<p>Durante a primeira fase aqui no clube, você será conhecido como Suporte, você poderá comparecer aos nossos eventos e encontros, conhecer a nossa rotina, entre outras coisas. Nesse momento de suporte, você irá tirar todas dúvidas que tiver de preferência com o Diretor de Instrução, mas também com outros membros e até mesmo com prospects.</p>
-						<p>Sempre ficar com a profissão de mecânico em interações do clube, assim será mais fácil de te identificar e você poderá ajudar caso aconteça algum acidente durante os encontros. Isso vale para Suporte e também para Prospects e Meio Coletes.</p>
+						<p>Então comparecendo aos eventos e encontros, interagindo com o pessoal, se colocando a disposição antes que qualquer membro pergunte, resulta apenas em pontos positivos e é isso que procuramos.</p>
+						<p>Também é um período para tirar todas dúvidas que tiver, de preferência com o Diretor de Instrução ou então com outros membros.</p>
+						<p>Sempre ficar com a profissão de mecânico em interações do clube, assim será mais fácil de te identificar e você poderá ajudar caso aconteça algum acidente durante os encontros.</p>
 					</div>
 				</div>
 				<div id="final-obs">
 					<div class="slick-content">
-						<h2>Conteúdo adicional</h2>
-						<ul>
-							<li>Como você lida com brincadeiras, zuação, você aguenta?</li>
+						<h2>Assuntos adicionais</h2>
+						<ol>
+							<li>Como você lida com brincadeiras, rigidez, você se magoa facilmente?</li>
 							<li>Comentar o básico sobre a coleta de lixos</li>
 							<li>Tem qual moto? Freeway ou Wayfarer?</li>
 							<li>Tem alguma treta com alguém ou algum grupo?</li>
 							<li>É de qual estado?</li>
-						</ul>
+						</ol>
 					</div>
 				</div>
 				<div>
 					<div class="slick-content">
-						<h3 style="text-align: center;">Agora depois de tudo que falamos, ainda está de disposto a continuar e começar a sua jornada?</h3>
+						<h3 style="text-align: center;">Agora depois de tudo que falamos, ainda está de disposto(a) a continuar e começar a sua jornada?</h3>
 					</div>
 				</div>
 			</div>
